[package]
name = "read"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["image", "debug", "tokio", "web-colors", "advanced", "lazy", "canvas"] }
serde_json = "1.0"
chrono = "0.4"
tracing-subscriber = "0.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.rand]
version = "0.8"

[dependencies.getrandom]
version = "0.2"
features = ["js"]